    Muñoz)
  * bug fix: out-of-line SB-SYS:FOREIGN-SYMBOL-ADDRESS did not work
    for variables on SBCL built with linkage-tables. (reported by Luis
    Oliveira)
  * various error reporting improvements.
  * optimizations: LOGNOR on fixnums is improved in the MIPS backend.
    (Thanks to Thiemo Seufer)
  * bug fix: nested reader invokations work correctly
  * threads
    ** added x86-64 support
    ** incompatible change: the threading api now works with thread
       objects instead of thread ids
    ** bug fix: threads are protected from signals and interruption when
       starting up or going down
    ** bug fix: a race where an exiting thread could lose its stack to gc
    ** bug fix: don't halt on infinite error in threads if possible
    ** fixed numerous gc deadlocks introduced in the pthread merge
    ** bug fix: fixed thread safety issues in read and print
    ** bug fix: debugger doesn't hang on session lock if interrupted at
       an inappropriate moment
    ** bug fix: run-program is now thread safe(r)
    ** bug fix: inner with-recursive-lock no longer releases the mutex
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** TYPE-ERRORs from signalled by COERCE now have DATUM and
       EXPECTED-TYPE slots filled.
    ** MULTIPLE-VALUE-SETQ always returns the primary value of the
       values form.
    ** MAKE-CONDITION accepts classes as type-designators.
    ** COMPILE may never return NIL.

changes in sbcl-0.9.2 relative to sbcl-0.9.1:
  * numerous signal handling fixes to increase stability
  * Support for EUC-JP external format.  (thanks to NIIMI Satoshi)
  * minor incompatible change: we now correctly canonize default
    initargs, making them be a list of (INITARG INITFORM INITFUNCTION)
    as per the MOP, rather than the historical (INITARG INITFUNCTION
    INITFORM).  (reported by Bruno Haible)
  * new feature: WITH-COMPILATION-UNIT now accepts a non-standard
    :SOURCE-PLIST option. See (DOCUMENTATION #'WITH-COMPILATION-UNIT T)