@@ -18,6 +18,8 @@ changes in sbcl-0.9.3 relative to sbcl-0.9.2:
   * optimizations: LOGNOR on fixnums is improved in the MIPS backend.
     (Thanks to Thiemo Seufer)
   * bug fix: nested reader invokations work correctly
+  * bug fix: it is possible to have simultaneous references to foreign
+    code and foreign data with the same name.
   * threads
     ** added x86-64 support
     ** incompatible change: the threading api now works with thread
